--- a/Lab1b/.vscode/tasks.json
+++ b/Lab1b/.vscode/tasks.json
@@ -7,6 +7,7 @@
             "args": [
                 "-g",
                 "${file}",
+                "-fopenmp",
                 "-o",
                 "${fileDirname}/${fileBasenameNoExtension}"
             ],
