--- a/Lab1b/CMakeLists.txt
+++ b/Lab1b/CMakeLists.txt
@@ -20,6 +20,8 @@ ELSE()
     message("Missed OpenMP")
 ENDIF()
 
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fopenmp")
+
 set(CPACK_PROJECT_NAME ${PROJECT_NAME})
 set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
 include(CPack)
